--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
           />
         </div>
       </div>
-      <button class="btn btn-danger w-100">Clear All</button>
+      <button class="btn btn-danger w-100" id="clear-btn">Clear All</button>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="./script.js"></script>
