--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         class="form-control"
         id="filter-input"
         name="item"
-        placeholder="Filter Items"
+        placeholder="Filter items"
       />
       <!-- Display shopping list items -->
       <div class="main-content d-flex flex-column gap-2">
