--- a/index.html
+++ b/index.html
@@ -24,8 +24,13 @@
         </div>
         <form id="item-form">
           <div class="input-group mb-2">
-            <input type="text" class="form-control" placeholder="Enter item" />
-            <button class="btn btn-primary" type="button" id="button-addon2">
+            <input
+              type="text"
+              class="form-control"
+              id="item-input"
+              placeholder="Enter item"
+            />
+            <button class="btn btn-primary" type="button" id="btn-add">
               Add item
             </button>
           </div>
@@ -41,126 +46,6 @@
       />
       <!-- Display shopping list items -->
       <div class="main-content d-flex flex-column gap-2">
-        <div class="item">
-          Eggs
-          <img
-            src="./assets/icons/xmark-solid.svg"
-            alt="delete item"
-            class="remove-item-icon"
-          />
-        </div>
-        <div class="item">
-          Eggs
-          <img
-            src="./assets/icons/xmark-solid.svg"
-            alt="delete item"
-            class="remove-item-icon"
-          />
-        </div>
-        <div class="item">
-          Eggs
-          <img
-            src="./assets/icons/xmark-solid.svg"
-            alt="delete item"
-            class="remove-item-icon"
-          />
-        </div>
-        <div class="item">
-          Eggs
-          <img
-            src="./assets/icons/xmark-solid.svg"
-            alt="delete item"
-            class="remove-item-icon"
-          />
-        </div>
-        <div class="item">
-          Eggs
-          <img
-            src="./assets/icons/xmark-solid.svg"
-            alt="delete item"
-            class="remove-item-icon"
-          />
-        </div>
-        <div class="item">
-          Eggs
-          <img
-            src="./assets/icons/xmark-solid.svg"
-            alt="delete item"
-            class="remove-item-icon"
-          />
-        </div>
-        <div class="item">
-          Eggs
-          <img
-            src="./assets/icons/xmark-solid.svg"
-            alt="delete item"
-            class="remove-item-icon"
-          />
-        </div>
-        <div class="item">
-          Eggs
-          <img
-            src="./assets/icons/xmark-solid.svg"
-            alt="delete item"
-            class="remove-item-icon"
-          />
-        </div>
-        <div class="item">
-          Eggs
-          <img
-            src="./assets/icons/xmark-solid.svg"
-            alt="delete item"
-            class="remove-item-icon"
-          />
-        </div>
-        <div class="item">
-          Eggs
-          <img
-            src="./assets/icons/xmark-solid.svg"
-            alt="delete item"
-            class="remove-item-icon"
-          />
-        </div>
-        <div class="item">
-          Eggs
-          <img
-            src="./assets/icons/xmark-solid.svg"
-            alt="delete item"
-            class="remove-item-icon"
-          />
-        </div>
-        <div class="item">
-          Eggs
-          <img
-            src="./assets/icons/xmark-solid.svg"
-            alt="delete item"
-            class="remove-item-icon"
-          />
-        </div>
-        <div class="item">
-          Eggs
-          <img
-            src="./assets/icons/xmark-solid.svg"
-            alt="delete item"
-            class="remove-item-icon"
-          />
-        </div>
-        <div class="item">
-          Eggs
-          <img
-            src="./assets/icons/xmark-solid.svg"
-            alt="delete item"
-            class="remove-item-icon"
-          />
-        </div>
-        <div class="item">
-          Eggs
-          <img
-            src="./assets/icons/xmark-solid.svg"
-            alt="delete item"
-            class="remove-item-icon"
-          />
-        </div>
         <div class="item">
           Eggs
           <img
