'Enter' now adds item.

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
               class="form-control"
               id="item-input"
               placeholder="Enter item"
+              autocomplete="off"
             />
             <button class="btn btn-primary" type="button" id="btn-add">
               Add item
@@ -43,6 +44,7 @@
         id="filter-input"
         name="item"
         placeholder="Filter items"
+        autocomplete="off"
       />
       <!-- Display shopping list items -->
       <div class="main-content d-flex flex-column gap-2">
