Moved main content styling to styles.css

--- a/index.html
+++ b/index.html
@@ -47,15 +47,8 @@
         autocomplete="off"
       />
       <!-- Display shopping list items -->
-      <div class="main-content d-flex flex-column gap-2">
-        <div class="item">
-          Eggs
-          <img
-            src="./assets/icons/xmark-solid.svg"
-            alt="delete item"
-            class="remove-item-icon"
-          />
-        </div>
+      <div class="main-content">
+        <!-- Items are loaded here -->
       </div>
       <button class="btn btn-danger w-100" id="clear-btn">Clear All</button>
     </div>
